--- a/project_goal.json
+++ b/project_goal.json
@@ -1,3 +1,3 @@
 {
-  "goal": "Identify a mix of federal and state judicial cases in both California and Massachusetts that stand for the principle that everybody is free to enter any types of contracts they see fit, in general."
+  "goal": "Identify the key things a SaaS platform providers must do and must not do at the a) business, b) legal, and c) technical levels of their business and systems levels, in order to ensure its user who are lawyers maintain priviledge for priviledged client data stored or communicated through their SaaS Platform."
 }
